# goventry-support

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  airbase.json  docker-entrypoint.sh  goventry-support-architecture-plan-v2.md  next.config.mjs  package-lock.json  package.json  render.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
.claude/: settings.local.json
apps/api/: .env.example  pyproject.toml  wsgi.py
apps/api/app/: __init__.py  config.py  extensions.py
apps/api/app/commands/: __init__.py  seed.py
apps/api/app/middleware/: auth_middleware.py
apps/api/app/models/: __init__.py  agency.py  audit_log.py  issue.py  knowledge_entry.py  proposed_action.py  role.py  team_member.py  ticket_message.py  user.py
apps/api/app/routes/: admin.py  agencies.py  approval.py  auth.py  issues.py  seed.py  team.py
apps/api/app/services/: approval_service.py  audit_service.py  auth_service.py  email_service.py  issue_service.py  knowledge_service.py  triage_service.py
apps/api/migrations/versions/: 0fc4b90f44cf_phase1_auth_tables.py  6023c1062122_phase3_approval_queue.py
apps/api/tests/: conftest.py  test_agencies_route.py  test_approval_routes.py  test_approval_service.py  test_auth_routes.py  test_auth_service.py  test_email_service.py  test_issue_service.py  test_issues_route.py  test_rbac.py  test_seed.py  test_triage_service.py
apps/backend/: .env.example  pyproject.toml  wsgi.py
infra/: compose.yaml
prisma/: docs.ts  schema.prisma  seed-if-empty.ts  seed.ts  sync-docs.ts
scripts/: test-formsg.mjs  test-goventry.mjs
(+141 files in other folders)
