[project]
name = "goventry-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.1",
    "flask-jwt-extended>=4.7",
    "flask-cors>=4.0",
    "pydantic-settings>=2.7",
    "passlib[bcrypt]>=1.7",
    "gunicorn>=23.0",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "anthropic>=0.40",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-flask>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
